# bigamemode

./: .gitignore  IMPLEMENTATION_REVIEW.md  PKGBUILD  README.md  com.biglinux.BiGameMode.json  lsfg-vk-1_1.0.0.r0.7113d7d-1-x86_64.pkg.tar.zst  meson.build
bigame-engine/: Cargo.toml
bigame-engine/bigame-core/: Cargo.toml  patch_profiles.md
bigame-engine/bigame-core/examples/: force_save.rs
bigame-engine/bigame-core/src/: config.rs  dbus.rs  dbus_client.rs  fg.rs  games.rs  gamescope.rs  governor.rs  launcher.rs  lib.rs  polkit.rs  profiles.rs  sched.rs  status.rs  telemetry.rs  vcache.rs  video_config.rs
bigame-engine/bigame-core/src/models/: mod.rs
bigame-engine/bigame-daemon/: Cargo.toml
bigame-engine/bigame-daemon/src/: main.rs
bigame-engine/bigame-ui/: Cargo.toml  build.rs
bigame-engine/bigame-ui/src/: app.rs  i18n.rs  main.rs  settings.rs  style.rs  tray.rs  window.rs
bigame-engine/bigame-ui/src/views/: dashboard.rs  logs.rs  mod.rs  profile_wizard.rs  profiles.rs  settings.rs  tuning.rs  video.rs
bigame-engine/bigame-ui/src/widgets/: booster_toggle.rs  error_indicator.rs  fg_controls.rs  mod.rs  scheduler_info.rs  sparkline.rs  telemetry_row.rs  toast.rs  tutorial.rs
data/: bigame-daemon.service  bigame-mode-sudoers  com.biglinux.BiGameMode.conf  com.biglinux.BiGameMode.policy  com.biglinux.BiGameMode.service  falcond.conf  falcond.service  falcond.sysusers  meson.build  org.falcond.conf  resources.gresource.xml
docs/: ARQUITETURA.md  CHAT_KNOWLEDGE_BiGameMode.md  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_STATUS.md  PROMPT_NOVAS_FUNCIONALIDADES.md
etc/sudoers.d/: bigame-mode
locale/: POTFILES.in  bg.po  bigame-mode.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt-BR.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
lsfg-vk-1_1.0.0.r0.7113d7d-1-x86_64.pkg/: .BUILDINFO  .MTREE  .PKGINFO
lsfg-vk-1_1.0.0.r0.7113d7d-1-x86_64.pkg/etc/vulkan/implicit_layer.d/: VkLayer_LS_frame_generation.json
lsfg-vk-1_1.0.0.r0.7113d7d-1-x86_64.pkg/usr/share/applications/: lsfg-vk-ui.desktop
lsfg-vk-1_1.0.0.r0.7113d7d-1-x86_64.pkg/usr/share/licenses/lsfg-vk/: LICENSE
style/: style.css
usr/share/applications/: com.biglinux.BiGameMode.desktop
usr/share/metainfo/: com.biglinux.BiGameMode.metainfo.xml
