[workspace]
resolver = "2"
members = ["bigame-core", "bigame-ui"]

[workspace.package]
version = "1.0.0"
authors = ["Rafael Ruscher <rruscher@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.85"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
