[package]
name = "bigame-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = "1"
