[package]
name = "bigame-daemon"
version = "1.0.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
zbus.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bigame-core = { path = "../bigame-core" }
