[package]
name = "bigame-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bigame-core = { path = "../bigame-core" }
libadwaita = { version = "0.7", features = ["v1_6"] }
gtk4 = { version = "0.9", features = ["v4_14"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
ksni = { version = "0.3", features = ["blocking"] }
